refactor: update method signatures and improve type safety across multiple classes
Signed-off-by: Roy Ash <roy.ash456@gmail.com>